--- a/index.html
+++ b/index.html
@@ -5,73 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adivinador de Animales</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
-        }
-
-        .container {
-            text-align: center;
-            background-color: white;
-            padding: 2rem;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h1 {
-            color: #333;
-        }
-
-        #question {
-            margin: 2rem 0;
-            font-size: 1.2rem;
-        }
-
-        .buttons {
-            display: flex;
-            justify-content: center;
-            gap: 1rem;
-        }
-
-        button {
-            padding: 0.5rem 2rem;
-            font-size: 1rem;
-            cursor: pointer;
-            border: none;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        #yes {
-            background-color: #4CAF50;
-            color: white;
-        }
-
-        #no {
-            background-color: #f44336;
-            color: white;
-        }
-
-        #playAgain {
-            background-color: #2196F3;
-            color: white;
-            display: none;
-        }
-
-        button:hover {
-            opacity: 0.9;
-        }
-    </style>
+    <link rel="shortcut icon" href="./images/favicon.png">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <body>
+    <!-- Botón de menú -->
+    <button class="menu-button" id="menuButton" onclick="toggleSidebar()">
+        <i class="material-icons">menu_book</i>
+    </button>
+
+    <!-- Barra lateral -->
+    <div class="sidebar" id="sidebar">
+        <button class="close-button" onclick="closeSidebar()">&times;</button>
+        <h2>Lista de Animales</h2>
+        <div id="animalListContainer">
+            <input type="text" id="search" placeholder="Buscar animal..." oninput="filterList()">
+            <ul id="animalList"></ul>
+        </div>
+        <div id="animalDetailsContainer" style="display: none;">
+            <button class="back-button" onclick="showAnimalList()">Atrás</button>
+            <h2 id="animalName"></h2>
+            <p id="animalDetails"></p>
+        </div>
+    </div>
+
     <div class="container">
+        <img src="recursos/genio.png" alt="Genio" class="genio">
         <h1>Adivinando el animal</h1>
         <div id="question">Cargando...</div>
         <div class="buttons">
@@ -82,70 +43,7 @@
         <p id="result"></p>
     </div>
 
-    <script>
-        let tree = null;
-        let currentNode = null;
-
-        // Cargar el JSON del árbol
-        async function loadTree() {
-            try {
-                const response = await fetch("animal_tree.json");
-                tree = await response.json();
-                currentNode = tree;
-                showQuestion();
-            } catch (error) {
-                console.error("Error al cargar el árbol:", error);
-                document.getElementById("question").textContent = "Error al cargar el juego. Por favor, intenta de nuevo más tarde.";
-            }
-        }
-
-        // Mostrar la pregunta o predicción
-        function showQuestion() {
-            const questionDiv = document.getElementById("question");
-            const resultDiv = document.getElementById("result");
-            const yesBtn = document.getElementById("yes");
-            const noBtn = document.getElementById("no");
-            const playAgainBtn = document.getElementById("playAgain");
-
-            resultDiv.textContent = "";
-
-            if (currentNode.prediction) {
-                // Si es nodo hoja, mostrar la predicción
-                questionDiv.textContent = `¡Tu animal es: ${currentNode.prediction}!`;
-                yesBtn.style.display = "none";
-                noBtn.style.display = "none";
-                playAgainBtn.style.display = "inline";
-            } else {
-                // Mostrar la pregunta del nodo actual
-                questionDiv.textContent = currentNode.question;
-                yesBtn.style.display = "inline";
-                noBtn.style.display = "inline";
-                playAgainBtn.style.display = "none";
-            }
-        }
-
-        // Navegación a las respuestas
-        function answerYes() {
-            if (currentNode.yes) {
-                currentNode = currentNode.yes;
-                showQuestion();
-            }
-        }
-
-        function answerNo() {
-            if (currentNode.no) {
-                currentNode = currentNode.no;
-                showQuestion();
-            }
-        }
-
-        function playAgain() {
-            currentNode = tree;
-            showQuestion();
-        }
-
-        document.addEventListener("DOMContentLoaded", loadTree);
-    </script>
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
+    <script src="script.js"></script>
 
 </html>
